fix(Sonar): some issues from last SonarCloud report fixed (#36)